--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   czech-anonymization:
     build:
@@ -9,6 +7,7 @@ services:
       - "3000:3000"
     networks:
       - shared-network
+    restart: always
 
   nametag3:
     build:
@@ -17,6 +16,7 @@ services:
       - "8001:8001"
     networks:
       - shared-network
+    restart: always
 
 networks:
   shared-network:
