--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 services:
   czech-anonymization:
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        max-time: "5m"
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,6 +16,12 @@ services:
     restart: always
 
   nametag3:
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        max-time: "5m"
     build:
       context: https://github.com/ZykaJiri/nametag3-docker.git
     ports:
