--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
     logging:
       driver: "json-file"
       options:
-        max-size: "1m"
-        max-file: "3"
+        max-size: "5k"
     build:
       context: .
       dockerfile: Dockerfile
@@ -18,8 +17,7 @@ services:
     logging:
       driver: "json-file"
       options:
-        max-size: "1m"
-        max-file: "3"
+        max-size: "5k"
     build:
       context: https://github.com/ZykaJiri/nametag3-docker.git
     ports:
